erDiagram
LogEntry {
  integer id pk
  timestamp_with_time_zone action_time 
  bigint user_id 
  integer content_type_id 
  text object_id 
  varchar object_repr 
  smallint action_flag 
  text change_message 
}
Permission {
  integer id pk
  varchar name 
  integer content_type_id 
  varchar codename 
}
Group {
  integer id pk
  varchar name 
}
ContentType {
  integer id pk
  varchar app_label 
  varchar model 
}
Session {
  varchar session_key pk
  text session_data 
  timestamp_with_time_zone expire_date 
}
User {
  bigint id pk
  varchar password 
  timestamp_with_time_zone last_login 
  boolean is_superuser 
  varchar username 
  varchar first_name 
  varchar last_name 
  varchar email 
  boolean is_staff 
  boolean is_active 
  timestamp_with_time_zone date_joined 
}
Unit {
  bigint id pk
  varchar name 
  varchar plural 
  varchar abbreviation 
  varchar category 
  boolean takes_of 
}
Tag {
  bigint id pk
  varchar name 
}
Ingredient {
  bigint id pk
  varchar name 
  varchar plural 
  varchar normalized_name 
}
Recipe {
  bigint id pk
  bigint owner_id 
  varchar name 
  varchar photo 
  integer rating_sum 
  integer rating_count 
  integer version 
  bigint copied_from_id 
  varchar copied_from_username 
  timestamp_with_time_zone created_at 
  timestamp_with_time_zone updated_at 
}
RecipeIngredient {
  bigint id pk
  bigint recipe_id 
  bigint ingredient_id 
  bigint unit_id 
  numeric quantity 
  smallint position 
}
Step {
  bigint id pk
  bigint recipe_id 
  text text 
  smallint position 
}
Review {
  bigint id pk
  bigint recipe_id 
  bigint user_id 
  smallint rating 
  timestamp_with_time_zone created_at 
}
Comment {
  bigint id pk
  bigint recipe_id 
  bigint author_id 
  text body 
  varchar photo 
  timestamp_with_time_zone created_at 
}
ShoppingItem {
  bigint id pk
  bigint user_id 
  bigint ingredient_id 
  bigint unit_id 
  numeric quantity 
  boolean is_checked 
  bigint source_recipe_id 
  timestamp_with_time_zone created_at 
}
Step }|--|| Recipe: ""
Tag }|--|{ Recipe: ""
Comment }|--|| Recipe: ""
Comment }|--|| User: ""
Group }|--|{ User: ""
Group }|--|{ Permission: ""
LogEntry }|--|| User: ""
LogEntry }|--|| ContentType: ""
Review }|--|| Recipe: ""
Review }|--|| User: ""
User }|--|{ Permission: ""
Permission }|--|| ContentType: ""
Recipe }|--|| User: ""
Recipe }|--|| Recipe: ""
RecipeIngredient }|--|| Recipe: ""
RecipeIngredient }|--|| Ingredient: ""
RecipeIngredient }|--|| Unit: ""
ShoppingItem }|--|| User: ""
ShoppingItem }|--|| Ingredient: ""
ShoppingItem }|--|| Unit: ""
ShoppingItem }|--|| Recipe: ""